# Data-clustering

./: .gitignore  CMakeLists.txt  Data clustering.sln  README.md  main.cpp
Data/: test_data.txt
Data clustering/: DC-Data4.txt  Data clustering.cpp
Inc/: CrispClustering.hpp  FuzzyClustering.hpp
Libs/Data/: CMakeLists.txt
Libs/Data/Inc/: Data.hpp
Libs/Data/Src/: Data.cpp
Libs/Data/Tests/: Data_tests.cpp
Libs/Data_tools/: CMakeLists.txt
Libs/Data_tools/Inc/: Data_tools.hpp
Libs/Data_tools/Src/: Data_tools.cpp
Libs/Files_tools/: CMakeLists.txt
Libs/Files_tools/Inc/: Files_tools.hpp
Libs/Files_tools/Src/: Files_tools.cpp
Libs/Files_tools/Tests/: Files_tools_test.cpp  Files_tools_tests.cpp
Libs/Linspain/: CMakeLists.txt
Libs/Linspain/Inc/: Linspain.hpp
Libs/Linspain/Src/: Linspain.cpp
Libs/Ploting_tools/: CMakeLists.txt
Libs/Ploting_tools/Inc/: Ploting_tools.hpp
Libs/Ploting_tools/Src/: Ploting_tools.cpp
Libs/Ploting_tools/Tests/: Ploting_tools_test.cpp  Ploting_tools_tests.cpp
Libs/Point/: CMakeLists.txt
Libs/Point/Inc/: Point.hpp
Libs/Point/Src/: Point.cpp
Libs/Point/Tests/: Point_tests.cpp
Src/: CrispClustering.cpp  FuzzyClustering.cpp
Tests/: CrispClustering_tests.cpp  FuzzyClustering_tests.cpp
data/: DC-Data4.txt
inc/: CrispClustering.hpp  Data.hpp  Files_tools.hpp  FuzzyClustering.hpp  Ploting_tools.hpp  Point.hpp
libs/Data/Src/: Data.cpp
libs/Data/Tests/: Data_test.cpp
libs/Files_tools/Tests/: Files_tools_test.cpp
libs/Ploting_tools/Src/: Ploting_tools.cpp
libs/Point/Src/: Point.cpp
src/: CrispClustering.cpp  CrispClustering.hpp  DCN-Data4.txt  Data.cpp  Data.hpp  Files_tools.cpp  FuzzyClustering.cpp  FuzzyClustering.hpp  Ploting_tools.cpp  Point.cpp  Point.hpp  main.cpp
tests/: CMakeLists.txt  Data_test.cpp  Files_tools_test.cpp  FuzzyClustering_test.cpp  Ploting_tools_test.cpp  Point_test.cpp
